--- a/src/components/layout/navbar/CustomNavbar.css
+++ b/src/components/layout/navbar/CustomNavbar.css
@@ -5,3 +5,12 @@
 .brand{
   padding-left: 0.3rem;
 }
+
+@media screen and (min-width: 1800px) {
+  .header-navbar {
+    font-size: 1.5rem;
+  }
+  .logo-img{
+    width: 4rem;
+  }
+}
