--- a/src/components/layout/tracks/Tracks.css
+++ b/src/components/layout/tracks/Tracks.css
@@ -6,20 +6,38 @@
   margin: 4rem;
 }
 
-@media screen and (min-width: 500px) {
+@media screen and (min-width: 300px) {
   .tracks-container {
     grid-template-columns: auto;
   }
 }
 
-@media screen and (min-width: 800px) {
+@media screen and (min-width: 700px) {
   .tracks-container {
     grid-template-columns: auto auto;
   }
 }
 
-@media screen and (min-width: 1800px) {
+@media screen and (min-width: 1200px) {
+  .tracks-container {
+    grid-template-columns: auto auto auto ;
+  }
+}
+
+@media screen and (min-width: 1600px) {
+  .tracks-container {
+    grid-template-columns: auto auto auto;
+  }
+}
+
+@media screen and (min-width: 2000px) {
   .tracks-container {
     grid-template-columns: auto auto auto auto;
+  }
+}
+
+@media screen and (min-width: 3000px) {
+  .tracks-container {
+    grid-template-columns: auto auto auto auto auto;
   }
 }
