--- a/src/components/layout/tracks/Tracks.css
+++ b/src/components/layout/tracks/Tracks.css
@@ -1,9 +1,8 @@
 .tracks-container{
   display: grid;
-  grid-template-columns: auto auto auto auto;
   justify-items: center;
   grid-gap: 7rem;
-  margin: 4rem;
+  margin: 7rem 4rem 0 4rem;
 }
 
 @media screen and (min-width: 300px) {
